tests/fail/kebab_subtraction_ambiguity.stderr
error[E0101]: Expected ';' or newline after statement
 --> tests/fail/kebab_subtraction_ambiguity.tk:3:11
   |
 3 |   auto max-size = 1024
   |           ^
error[E0101]: Expected ';' or newline after statement
 --> tests/fail/kebab_subtraction_ambiguity.tk:4:12
   |
 4 |   auto user-name = "Toka"
   |            ^
